# docs/swagger.yaml
@@ -930,19 +930,14 @@ paths:
   /user/notification:
     get:
       parameters:
-      - description: AppID Device
+      - description: OS Device
         in: header
-        name: app_id
+        name: OS
         required: true
         type: string
-      - description: Version Device
+      - description: OS Device
         in: header
-        name: version
-        required: true
-        type: string
-      - description: Language
-        in: header
-        name: language
+        name: Version
         required: true
         type: string
       - description: Page
@@ -982,19 +977,14 @@ paths:
   /user/notification/{id}:
     get:
       parameters:
-      - description: AppID Device
+      - description: OS Device
         in: header
-        name: app_id
+        name: OS
         required: true
         type: string
-      - description: Version Device
+      - description: OS Device
         in: header
-        name: version
-        required: true
-        type: string
-      - description: Language
-        in: header
-        name: language
+        name: Version
         required: true
         type: string
       - description: ID
@@ -1016,19 +1006,14 @@ paths:
       - Notification
     put:
       parameters:
-      - description: AppID Device
+      - description: OS Device
         in: header
-        name: app_id
+        name: OS
         required: true
         type: string
-      - description: Version Device
+      - description: OS Device
         in: header
-        name: version
-        required: true
-        type: string
-      - description: Language
-        in: header
-        name: language
+        name: Version
         required: true
         type: string
       - description: ID
@@ -1057,19 +1042,14 @@ paths:
   /user/notification/beranda:
     get:
       parameters:
-      - description: AppID Device
+      - description: OS Device
         in: header
-        name: app_id
+        name: OS
         required: true
         type: string
-      - description: Version Device
+      - description: OS Device
         in: header
-        name: version
-        required: true
-        type: string
-      - description: Language
-        in: header
-        name: language
+        name: Version
         required: true
         type: string
       produces:
